# cron-rs-web

./: .gitignore  README.md  next.config.js  package-lock.json  package.json
.github/workflows/: ci.yml  release.yml
app/: globals.css  layout.tsx  page.tsx
app/hooks/: HookListView.tsx  page.tsx
app/login/: page.tsx
app/runs/: RunDetailViewPage.tsx  RunListView.tsx  RunsPageContent.tsx  page.tsx
app/settings/: SettingsView.tsx  page.tsx
app/tasks/: TaskDetailView.tsx  TaskListView.tsx  TasksPageContent.tsx  page.tsx
components/Dashboard/: ChartCard.tsx  EmptyState.tsx  HeatmapCard.tsx  RecentFailures.tsx  RecentRuns.tsx  RunChart.tsx  StatsCards.tsx  TopTasks.tsx  Upcoming.tsx
components/Hooks/: HookForm.tsx  HookTable.tsx  HooksScreen.tsx
components/Layout/: AppLayout.tsx  AppShell.tsx  AuthGuard.tsx  CmdK.tsx  PulseRail.tsx  SideNav.tsx  ThemeBoot.tsx  ThemeProvider.tsx  Topbar.tsx
components/Runs/: OutputViewer.tsx  RunDetail.tsx  RunDetailView.tsx  RunsListView.tsx  RunsTable.tsx  Terminal.tsx
components/Settings/: SettingsScreen.tsx
components/Tasks/: BulkActions.tsx  CronBuilder.tsx  SchedulePickerModal.tsx  TaskDetailContent.tsx  TaskDetailModal.tsx  TaskDetailView.tsx  TaskForm.tsx  (+3 more)
hooks/: useAuth.ts  useDashboard.ts  useRuns.ts  useSSE.ts  useTasks.ts
lib/: analytics.ts  api.ts  auth.ts  clipboard.ts  date.ts  hooks.ts  navigation.ts  schedule.ts  scheduleBuilder.ts  stagger.ts  tags.ts  types.ts
public/: runtime-config.js
server/: Cargo.toml
server/src/: main.rs
stores/: dashboardStore.ts  prefsStore.ts  uiStore.ts
(+9 files in other folders)
