[package]
name = "cron-rs-web-server"
version = "0.1.0"
edition = "2021"
description = "Simple static server for cron-rs web dashboard"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
rust-embed = "8"
mime_guess = "2"
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
